@@ -68,6 +68,7 @@ files = (
     'two_scales.py',
     'unicode_demo.py',
     'vline_demo.py',
+    'xcorr_demo.py',
     'zorder_demo.py',
     )
 
@@ -132,8 +133,8 @@ if __name__ == '__main__':
     # backends = ['Agg', 'Cairo', 'GDK', 'PS', 'SVG', 'Template']
     #backends = ['Agg', 'PS', 'SVG', 'Template']
     # backends = [ 'GTK', 'WX', 'TkAgg']
-    #default_backends = ['Agg', 'PS', 'SVG', 'Template']
-    default_backends = ['Agg']
+    default_backends = ['Agg', 'PS', 'SVG', 'Template']
+    #default_backends = ['Agg']
     #backends = ['Agg']
     if sys.platform == 'win32':
         python = r'c:\Python24\python.exe'
